--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "react-search-box": "^2.0.2",
     "react-search-field": "^1.0.0"
   },
+  "homepage": "https://vibhushit07.github.io/Fandom/",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
